--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,3 +5,35 @@
   background-repeat:no-repeat; 
   position: absolute;
 }
+.question-view{
+  margin-top: 50rpx;
+  width:100%;
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.leather-volume {
+  width: 80%;
+  height: 100%;
+  text-align: center;
+  background-color: beige; /* 材质颜色 */
+  border-radius: 10px; /* 圆角边框 */
+  box-shadow: 
+    0 1px 4px rgba(0, 0, 0, 0.3), /* 阴影 */
+    0 0 40px rgba(0, 0, 0, 0.1) inset; /* 内阴影 */
+  position: relative; /* 相对定位用于装饰线 */
+}
+ 
+.leather-volume::before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  background-color: beige; /* 更深的颜色作为装饰线 */
+  border-radius: 8px; /* 圆角 */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8) inset; /* 内阴影作为装饰线 */
+}
