--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -8,16 +8,21 @@
 .question-view{
   margin-top: 50rpx;
   width:100%;
-  height: 25%;
+  height: 425rpx;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .leather-volume {
-  width: 80%;
-  height: 100%;
+  width: 70%;
+  height: 300rpx;
   text-align: center;
+  display: flex;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+  align-items: center;
   background-color: beige; /* 材质颜色 */
   border-radius: 10px; /* 圆角边框 */
   box-shadow: 
@@ -39,12 +44,15 @@
 }
 
 .glowing-button {
-  margin-top: 30rpx;
-  height: 100rpx;
+  margin-top: 25rpx;
+  width: 550rpx;
+  height: 90rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
   border-radius: 10px;
   color: white;
-  text-align: center;
   font-size: 37rpx;
   transition: 0.5s;
   cursor: pointer;
@@ -53,4 +61,23 @@
 .glowing-button:hover {
   box-shadow: 0 0 20rpx #a18cd1;
   filter: brightness(1.2); /* 提高亮度 */
+}
+.question-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.question-btn{
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  width: 600rpx;
+  margin: 10rpx;
+  height: 75rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  color: white;
+  font-size: 30rpx;
+  cursor: pointer;
 }
