--- a/miniprogram/pages/devine/devine.wxml
+++ b/miniprogram/pages/devine/devine.wxml
@@ -1,1 +1,9 @@
+<view class="setting-page">
+  <view class="pick-row">
+    
+  </view>
+  <view class="card-row">
+    <view wx:for="{{cardStyles}}"  wx:key="index" style="{{cardStyles[index]}}"></view>
+  </view>
+</view>
 
