--- a/miniprogram/pages/devine/devine.wxss
+++ b/miniprogram/pages/devine/devine.wxss
@@ -1,1 +1,19 @@
-/* pages/devine/devine.wxss */
+.card-row{
+  margin-top: 20rpx;
+  display: flex;
+  /* 子元素会均匀地分布在容器内 */
+  justify-content: center;
+  align-items: center;
+  margin-left: 115rpx;
+  height: 700rpx;
+}
+.setting-page{
+  width:100%;
+  background-size: cover;
+  background-image: url("https://6c65-lets-play-4g9llnlf4dd7edd7-1304389115.tcb.qcloud.la/txrpic-11009835.gif?sign=407974077d14f5e08b35e754ac4d1663&t=1711000461");
+  background-repeat:no-repeat; 
+  position: absolute;
+}
+.pick-row{
+  height: 500rpx;
+}
