--- a/miniprogram/pages/devine/devine.wxml
+++ b/miniprogram/pages/devine/devine.wxml
@@ -1,6 +1,6 @@
 <view class="setting-page">
   <view class="card-row">
-    <view wx:for="{{cardStyles}}"  wx:key="index" style="{{cardStyles[index]}}" data-idx="{{index}}" bindtap="handleDivClick"></view>
+    <view wx:for="{{cardStyles}}"  wx:key="index" class="{{'card-'+index}}" style="{{cardStyles[index]}}" data-idx="{{index}}" animation="{{move[index]}}" bindtap="handleDivClick"></view>
   </view>
 </view>
 
