--- a/miniprogram/pages/devine/devine.wxml
+++ b/miniprogram/pages/devine/devine.wxml
@@ -1,4 +1,8 @@
 <view class="setting-page">
+  <view wx:if="{{haveOnePick}}" class="{{'card-'+pickedIdx}}"
+  bindtap="rotateCard">
+    
+  </view>
   <view class="card-row">
     <view wx:for="{{cardStyles}}"  wx:key="index" class="{{'card-'+index}}" style="{{cardStyles[index]}}" data-idx="{{index}}" animation="{{move[index]}}" bindtap="handleDivClick"></view>
   </view>
