--- a/miniprogram/pages/devine/devine.wxml
+++ b/miniprogram/pages/devine/devine.wxml
@@ -1,4 +1,11 @@
 <view class="setting-page">
+  <view class="picked-cards">
+    <view class="before"></view>
+    <view class="now">
+      
+    </view>
+    <view class="future"></view>
+  </view>
   <view class="card-row">
     <view wx:for="{{cardStyles}}"  wx:key="index" class="{{'card-'+index}}" style="{{cardStyles[index]}}" data-idx="{{index}}" animation="{{move[index]}}" bindtap="handelClicks"></view>
   </view>
