--- a/miniprogram/pages/devine/devine.wxml
+++ b/miniprogram/pages/devine/devine.wxml
@@ -1,5 +1,4 @@
 <view class="setting-page">
-
   <view class="picked-cards">
     <view class="before">
       <p>过去</p>
@@ -16,4 +15,6 @@
     <view wx:for="{{cardStyles}}"  wx:key="index" class="{{'card-'+index}}" style="{{cardStyles[index]}}" data-idx="{{index}}" animation="{{move[index]}}" bindtap="handelClicks"></view>
   </view>
 </view>
+<image style="width:100%;height: 100vh;" src="../../images/background.gif">
+</image>
 
