--- a/miniprogram/pages/devine/devine.wxss
+++ b/miniprogram/pages/devine/devine.wxss
@@ -2,7 +2,7 @@
   width:100%;
   height: 100%;
   background-size: cover;
-  background-image: url("https://p5.itc.cn/q_70/images03/20210919/1c90a884dad34c30a5652bdf562883a9.gif");
+  background-image: url("../../images/background.gif");
   background-repeat:no-repeat; 
   position: absolute;
 }
