--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -9,5 +9,6 @@
       <view class="question-btn" >{{ item }}</view>
     </view>
   </view>
-  
 </view>
+<image style="width:100%;height: 100vh;" src="../../images/background.gif">
+</image>
