--- a/miniprogram/pages/result/result.wxml
+++ b/miniprogram/pages/result/result.wxml
@@ -1,8 +1,10 @@
 <view class="result">
-  <view>
+  <view class="card">
     
   </view>
-  <view>
-    {{answer}}
+  <view class="text">
+    <text>{{answer}}</text>
   </view>
 </view>
+<image style="width:100%;height: 100vh;" src="../../images/background.gif">
+</image>
