--- a/miniprogram/pages/result/result.wxss
+++ b/miniprogram/pages/result/result.wxss
@@ -1,1 +1,24 @@
-/* 分析卡牌结果 */
+.result{
+  width:100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat:no-repeat; 
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card{
+  width: 80%;
+  height: 40%;
+}
+.text{
+  border: 1px solid black;
+  width: 320px;
+  padding: 10rpx;
+  height: 300px;
+  overflow: auto;
+  border-radius: 50rpx;
+  font-size: 30rpx;
+  background-image: url('../../images/xinzhi.png');
+}
