--- a/miniprogram/pages/result/result.wxml
+++ b/miniprogram/pages/result/result.wxml
@@ -1,9 +1,14 @@
 <view class="result">
-  <view class="card">
-    
-  </view>
+  <scroll-view class="scroll-box" scroll-x scroll-with-animation 
+  scroll-into-view="{{toView}}"
+  bindtouchstart="onTouchStart"
+  bindtouchend="onTouchMove">
+    <view wx:for="{{imgList}}" wx:key="item" class="card-box" id="card_{{index}}">
+      <image src="{{imgList[index]}}" mode="aspectFit"></image>
+    </view>
+  </scroll-view>
   <view class="text">
-    <text>{{answer}}</text>
+    <text class="answer">{{answer}}</text>
   </view>
 </view>
 <image style="width:100%;height: 100vh;" src="../../images/background.gif">
