--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <view class="setting-page"  style="height: {{screenHeight}}px;">
   <view class="question-view">
-    <textarea maxlength="50" class="leather-volume" placeholder="请输入你心中所想……" value="{{userQuestion}}"></textarea>
+    <textarea maxlength="50" class="leather-volume" placeholder="请输入你心中所想……" model:value="{{userQuestion}}"></textarea>
     <view class="glowing-button" bindtap="answerQuestion">点我解答</view>
   </view>
   <view class="question-block">
