--- a/miniprogram/pages/result/result.wxss
+++ b/miniprogram/pages/result/result.wxss
@@ -19,6 +19,29 @@
 
 .card-box{
   display: inline-block;
+  margin-left: 30rpx;
+  margin-right: 20rpx;
+}
+.card-group{
+  display: flex;
+}
+.text-group{
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin-left: -150rpx;
+  align-items: center;
+  justify-content: center;
+  font-size: 50rpx;
+  color: white
+}
+.name{
+  font-size: 0.7em;
+  margin-top: 75rpx;
+  margin-left: 45rpx;
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  padding: 10rpx;
+  border-radius: 20rpx;
 }
 /* #card_0{
   margin-right: 30rpx;
