--- a/miniprogram/pages/result/result.wxml
+++ b/miniprogram/pages/result/result.wxml
@@ -18,7 +18,8 @@
     </view>
   </scroll-view>
   <view class="text">
-    <text class="answer">{{answer}}</text>
+    <text class="answer" data-copytext="{{copyText}}">{{answer}}</text>
+    <view class="backIndex" bindtap="backIndex">回到首页</view>
   </view>
 </view>
 <image style="width:100%;height: 100vh;" src="../../images/background.gif">
