--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,2 +1,11 @@
-
-
+.page{
+  width:100%;
+  height: 100vh;
+  background-size: cover;
+  background-image: url("http://pets-shop.oss-cn-beijing.aliyuncs.com/background.gif");
+  background-repeat:no-repeat; 
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
