--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,4 @@
-<view class="setting-page"  style="height: {{screenHeight}}px;">
+<view class="page">
   <view class="question-view">
     <textarea maxlength="50" class="leather-volume" placeholder="请输入你心中所想……" model:value="{{userQuestion}}"></textarea>
     <view class="glowing-button" bindtap="answerQuestion">点我解答</view>
@@ -10,5 +10,3 @@
     </view>
   </view>
 </view>
-<image style="width:100%;height: 100vh;" src="../../images/background.gif">
-</image>
