--- a/miniprogram/pages/result/result.wxml
+++ b/miniprogram/pages/result/result.wxml
@@ -1,20 +1,18 @@
-<view class="result">
+<view class="page">
   <scroll-view class="scroll-box" scroll-x scroll-with-animation 
   scroll-into-view="{{toView}}"
   bindtouchstart="onTouchStart"
   bindtouchend="onTouchMove">
     <view wx:for="{{imgList}}" wx:key="item" class="card-box" id="card_{{index}}">
       <view class="card-group">
-        <image src="{{imgList[index]}}" mode="aspectFit"></image>
+        <image class="card" src="{{imgList[index]}}" mode="widthFix"></image>
         <view class="text-group">
           <text>{{date[index]}}</text>
           <view class="name">
             <text>{{nameList[index]}}</text>
           </view>
-          
         </view>
       </view>
-    
     </view>
   </scroll-view>
   <view class="text">
@@ -22,5 +20,3 @@
     <view class="backIndex" bindtap="backIndex">回到首页</view>
   </view>
 </view>
-<image style="width:100%;height: 100vh;" src="../../images/background.gif">
-</image>
