--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,9 +1,9 @@
 .page{
   width:100%;
-  height: 100vh;
-  background-size: cover;
+  height: auto;
   background-image: url("http://pets-shop.oss-cn-beijing.aliyuncs.com/background.gif");
-  background-repeat:no-repeat; 
+  background-repeat: repeat-y; /* 垂直方向重复 */
+  background-size: cover; 
   position: absolute;
   display: flex;
   flex-direction: column;
