--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,7 +4,14 @@
     <view class="glowing-button" bindtap="answerQuestion">点我解答</view>
   </view>
   <view class="question-block">
-    <view class="title">你可能想问</view>
+    <view class="maybe-ask">
+      <view class="title">你可能想问</view>
+      <view class="change-q">
+        <image class="change" src="../../images/icon/change.png"></image>
+        <view>换一换</view>
+      </view>
+    
+    </view>
     <view class="question-list" wx:for="{{ questions }}" wx:key="index" bindtap="getUserQuestion" data-index="{{index}}">
       <view class="question-btn" >{{ item }}</view>
     </view>
