--- a/miniprogram/pages/message/message.wxss
+++ b/miniprogram/pages/message/message.wxss
@@ -1,1 +1,42 @@
-/* pages/message/message.wxss */
+.message-page{
+  width:100%;
+  height: 100vh;
+  background-image: url("https://pets-shop.oss-cn-beijing.aliyuncs.com/1x1_%E8%90%9D%E8%8E%89.png");
+  background-repeat: no-repeat; /* 垂直方向重复 */
+  background-size: cover; 
+  display: flex;
+}
+.author-info{
+  width: 55%;
+  height: 100rpx;
+  background-color: rgba(0,0,0,0.5);
+  margin: 20rpx;
+  border-radius: 50rpx;
+  display: flex;
+  align-items: center;
+}
+.avater{
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50rpx;
+}
+.detail{
+  display: flex;
+  flex-direction: column;
+  margin-left: 20rpx;
+  font-size: 30rpx;
+  justify-content: center;
+  color: white;
+}
+.concern{
+  width: 80rpx;
+  height: 50rpx;
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+  border-radius: 50rpx;
+  margin-left: 70rpx;
+  display: flex;
+  font-size: 50rpx;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
