--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,10 +1,11 @@
-.page{
-  width:100%;
-  height: auto;
+.page {
+  width: 100%;
+  min-height: 100vh; /* 保证内容不至于太少 */
   background-image: url("http://pets-shop.oss-cn-beijing.aliyuncs.com/background.gif");
-  background-repeat: repeat-y; /* 垂直方向重复 */
-  background-size: cover; 
-  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; /* 背景图固定 */
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
