--- a/miniprogram/pages/message/message.wxss
+++ b/miniprogram/pages/message/message.wxss
@@ -44,11 +44,10 @@
 }
 .chat{
   width: 100%;
-  height: 60%;
   overflow-y: scroll;
   position: fixed;
   bottom: 150rpx;
-  max-height: 60%;
+  max-height: 50%;
   display: flex;
   flex-direction: column;
 }
@@ -74,10 +73,10 @@
   font-size: 30rpx;
 }
 .user-box{
-  height: 75rpx;
+  min-height: 75rpx;
   background-color: rgba(0,0,0,0.7);
   color: white;
-  padding: 10rpx 20rpx;
+  padding: 15rpx 20rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,11 +85,11 @@
   margin-bottom: 20rpx;
 }
 .ai-box{
-  height: 75rpx;
+  min-height: 75rpx;
   background-color: rgb(161, 110, 32);
   color: white;
   max-width: 80%;
-  padding: 10rpx 20rpx;
+  padding: 15rpx 20rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -113,20 +112,19 @@
   margin-left: 20rpx;
 }
 .deviner{
-  width: 90%;
-  height: 100rpx;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(0,0,0,0.7);
   border-radius: 20rpx;
   color: white;
-  margin-bottom: 30rpx;
+  padding-bottom: 20rpx;
 }
 .summary{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
+  width: 90%;
+  font-size: 30rpx;
 }
