--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,7 +1,7 @@
 .page {
   width: 100%;
   min-height: 100vh; /* 保证内容不至于太少 */
-  background-image: url("http://pets-shop.oss-cn-beijing.aliyuncs.com/background.gif");
+  background-image: url("https://gitee.com/Anxiaozhuang/pic-storage/raw/master/back.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; /* 背景图固定 */
