--- a/miniprogram/pages/message/message.wxss
+++ b/miniprogram/pages/message/message.wxss
@@ -1,7 +1,7 @@
 .message-page{
   width:100%;
   height: 100vh;
-  background-image: url("https://pets-shop.oss-cn-beijing.aliyuncs.com/1x1_%E8%90%9D%E8%8E%89.png");
+  background-image: url("https://gitee.com/Anxiaozhuang/pic-storage/raw/master/0005018303729713_b.jpg");
   background-repeat: repeat-y; /* 垂直方向重复 */
   background-size: cover; 
   display: flex;
@@ -120,6 +120,8 @@
   border-radius: 20rpx;
   color: white;
   padding-bottom: 20rpx;
+  position: fixed;
+  margin-top: 150rpx;
 }
 .summary{
   display: flex;
